# FlowWeaver

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  flowweaver-product-spec-for-repo.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.cargo/: config.toml
.claude/: settings.json
src/: App.css  App.tsx  index.css  templates.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: audit_syntheses.rs
src-tauri/icons/: icon.icns
src-tauri/src/: classifier.rs  commands.rs  consent_log_store.rs  crypto.rs  drive_relay.rs  episode_detector.rs  fs_watcher.rs  grouper.rs  importer.rs  lib.rs  main.rs  pattern_blocks.rs  pattern_detector.rs  raw_event.rs  session_builder.rs  state_machine.rs  storage.rs  syntheses_store.rs  synthesis_engine.rs  synthesis_tokens.rs  trust_scorer.rs
src-tauri/tests/: cross_lang_crypto.rs  e2e_relay_roundtrip.rs  relay_naming_convention.rs
src-tauri/tests/fixtures/: cross_lang_naming.json  cross_lang_vectors.json
src/components/: AnticipatedWorkspace.tsx  EpisodePanel.tsx  FsWatcherSection.tsx  MobileGallery.tsx  MobilePrivacyDashboard.tsx  PanelA.tsx  PanelB.tsx  PanelC.tsx  PatternsSection.tsx  PrivacyDashboard.tsx  PrivacyDashboardNeverSeen.tsx  SynthesisConsentModal.tsx  SynthesisOnboarding.tsx  SynthesisSection.tsx  SynthesisView.tsx  TrustStateSection.tsx
src/hooks/: useSynthesis.test.ts  useSynthesis.ts
src/utils/: renderMarkdown.test.ts  renderMarkdown.ts  synthesisCategory.test.ts  synthesisCategory.ts
