[package]
name = "flowweaver"
version = "0.0.1"
description = "FlowWeaver desktop workspace"
authors = []
edition = "2021"

[lib]
name = "flowweaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
dirs-next = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
