[package]
name = "flowweaver"
version = "0.0.1"
description = "FlowWeaver desktop workspace"
authors = []
edition = "2021"

[lib]
name = "flowweaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
hex = "0.4"
dirs-next = "2"

# Desktop: SQLCipher con OpenSSL vendored. Android: SQLite bundled (SQLCipher vendored-openssl
# no compila en cross-compilación Windows→Android por limitación de openssl-src/perl).
# D1 se preserva en ambos via field-level XOR en crypto.rs (url/title cifrados antes del INSERT).
[target.'cfg(not(target_os = "android"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
