[package]
name = "flowweaver"
version = "0.0.1"
description = "FlowWeaver desktop workspace"
authors = []
edition = "2021"

[lib]
name = "flowweaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
hex = "0.4"
dirs-next = "2"
# AES-256-GCM field-level encryption — replaces XOR on Android (R-0c-001), D1 upgrade
aes-gcm = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
sha2 = "0.10"
# Async time for background relay loop (Tauri async runtime is tokio)
tokio = { version = "1", features = ["time"] }

# Desktop: SQLCipher con OpenSSL vendored. Android: SQLite bundled (SQLCipher vendored-openssl
# no compila en cross-compilación Windows→Android por limitación de openssl-src/perl).
# D1 se preserva en ambos via AES-256-GCM field-level en crypto.rs.
[target.'cfg(not(target_os = "android"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
# Google Drive REST API client — desktop relay only
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
# T-2-000 FS Watcher (TS-2-000): cross-platform file events
# (ReadDirectoryChangesW on Windows, FSEvents on macOS, inotify on Linux).
# Excluded from Android target — Scoped Storage incompatible with TS-2-000 (D19 stub).
notify = "6"
dirs = "5"

[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
